--- a/app/salesapp/webapp/i18n/i18n.properties
+++ b/app/salesapp/webapp/i18n/i18n.properties
@@ -6,8 +6,8 @@
 appTitle=Sales Order
 
 #YDES: Application description
-appDescription=Sales Order application.
+appDescription=Sales Order application. CI / CD
 #XTIT: Main view title
 title=Sales Order
 
-flpTitle=Sales Order
+flpTitle=Sales Order CI / CD
