--- a/app/salesapp/webapp/i18n/i18n.properties
+++ b/app/salesapp/webapp/i18n/i18n.properties
@@ -3,11 +3,11 @@
 #Texts for manifest.json
 
 #XTIT: Application name
-appTitle=Sales Order CI / CD
+appTitle=Sales Order 07
 
 #YDES: Application description
-appDescription=Sales Order application. CI / CD
+appDescription=Sales Order application 07
 #XTIT: Main view title
 title=Sales Order
 
-flpTitle=Sales Order CI / CD
+flpTitle=Sales Order 07
